--- a/minting-dapp-vue/public/index.html
+++ b/minting-dapp-vue/public/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Hanzo Avatar Minting Dapp</title>
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon.png">
+    <title>Hanzo Avatars Minting Dapp</title>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="" src="<%= BASE_URL %>tw_card.jpg" />
+    <meta
+      name="twitter:title"
+      content="Hanzo MMORPG NFT Avatars Minting Dapp"
+    />
+    <meta name="twitter:creator" content="@Forge21Official" />
+    <meta name="twitter:site" content="@LegendOfHanzo" />
+    <meta
+      name="twitter:description"
+      content="It is time to begin your adventure in the upcoming Legend of Hanzo MMORPG Universe, on Ethereum Blockchain."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.thelegendofhanzo.com/" />
+    <meta
+      property="og:title"
+      content="Hanzo MMORPG NFT Avatars Minting Dapp"
+    />
+    <meta
+      property="og:description"
+      content="It is time to begin your adventure in the upcoming Legend of Hanzo MMORPG Universe, on Ethereum Blockchain."
+    />
+    <meta
+      property="og:image"
+      content="<%= BASE_URL %>tw_card.jpg"
+    />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but Hanzo Minting Dapp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <main>
       <div id="app"></div>
