--- a/minting-dapp-vue/public/index.html
+++ b/minting-dapp-vue/public/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="<%= BASE_URL %>apple-touch-icon.png">
     <title>Hanzo Avatars Minting Dapp</title>
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="" src="<%= BASE_URL %>tw_card.jpg" />
+    <meta name="twitter:image" content="" src="<%= BASE_URL %>Hanzo_Banner.jpg" />
     <meta
       name="twitter:title"
       content="Hanzo MMORPG NFT Avatars Minting Dapp"
@@ -31,7 +31,7 @@
     />
     <meta
       property="og:image"
-      content="<%= BASE_URL %>tw_card.jpg"
+      content="<%= BASE_URL %>Hanzo_Banner.jpg"
     />
   </head>
   <body>
